# kslader8-thoughts

./: 404.html  README.md  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  settings.ini  sitemap.xml
.github/workflows/: check_config.yaml  upgrade.yaml
2020/12/27/: hackerrank-question.html
2021/01/07/: sample-eda.html
2021/01/14/: differential-privacy-visualized.html
2021/03/29/: aml-exp.html
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_notebooks/: 2020-12-27-hackerrank-question.ipynb  2021-01-07-sample-eda.ipynb  2021-01-14-differential-privacy-visualized.ipynb  2021-01-18-sorted-collections.ipynb  2021-01-22-spacy-version-3.ipynb  2021-02-13-hackerrank-questions.ipynb  2021-03-29-aml-exp.ipynb  2021-04-04-aml-exp-continuation-1.ipynb  2021-04-04-aml-exp-continuation.ipynb  2021-04-11-aml-exp-continuation-2.ipynb  2025-01-20-dependency-injection.ipynb
_pages/: about.md
_pages/.ipynb_checkpoints/: about-checkpoint.md
_posts/: 2021-04-09-dispersion-bond-selloff.md
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
data-structures/2021/01/18/: sorted-collections.html
hacker-rank/2020/12/27/: hackerrank-question.html
hacker-rank/2021/02/13/: hackerrank-questions.html
hackerrank/2020/12/27/: hackerrank-question.html
hackerrank/2021/02/13/: hackerrank-questions.html
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
nlp/2021/01/22/: spacy-version-3.html
search/: index.html
(+5 files in other folders)
